# chetan

./: .gitignore  pyproject.toml
demos/: cfg.yaml  dx.ipynb  v0.ipynb
docs/: bun.lockb  next.config.mjs  package.json  source.config.ts
docs/content/docs/: meta.json
docs/content/docs/examples/: college-search.mdx  meta.json
docs/content/docs/framework/: index.mdx  meta.json
docs/content/docs/framework/(concepts)/agent-loop/: index.mdx
docs/content/docs/framework/(getting-started)/: guide.mdx  installation.mdx
docs/content/docs/framework/(intro)/: quickstart.mdx
docs/src/app/: global.css  layout.config.tsx  layout.tsx
docs/src/app/docs/[[...slug]]/: page.tsx
docs/src/lib/: source.ts
src/chetan/: __init__.py
src/chetan/agent/: __init__.py
src/chetan/entity/: __init__.py
src/chetan/lm/: __init__.py  openai.py
src/chetan/modules/: __init__.py
src/chetan/modules/memory/: __init__.py
src/chetan/modules/rec/: __init__.py
src/chetan/utils/: cfg.py
