[project]
name = "chetan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tridib Roy Arjo", email = "softmetricltd@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pendulum>=3.0.0",
    "pydantic>=2.10.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
